Create and Read operation level 1 complete-11/Sep/2020

--- a/AUSPrintings-war/WebContent/WEB-INF/web.xml
+++ b/AUSPrintings-war/WebContent/WEB-INF/web.xml
@@ -55,6 +55,7 @@
 			<web-resource-name>WebResource</web-resource-name>
 			<url-pattern>/staff/*</url-pattern>
 			<url-pattern>/faces/staff/*</url-pattern>
+			<url-pattern>/faces/faces/staff/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<description>Staff</description>
