--- a/AUSPrintings-war/.classpath
+++ b/AUSPrintings-war/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/AUSPrintings-common"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/FIT5042"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
