--- a/AAUSPrintings/.project
+++ b/AAUSPrintings/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AAUSPrinting-service</name>
+	<name>AAUSPrintings</name>
 	<comment></comment>
 	<projects>
 		<project>AAUSPrintings-ejb-Service</project>
